Impliment processor information logic and create new class to store core details

--- a/z1951125_project1_dir/Makefile
+++ b/z1951125_project1_dir/Makefile
@@ -9,13 +9,16 @@ PROGS = z1951125_project_1
 
 all: $(PROGS) 
 
-z1951125_project_1: main.o cpuInfo.o
+z1951125_project_1: main.o cpuInfo.o coreDetail.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
 main.o: main.cpp cpuInfo.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
-cpuInfo.o: cpuInfo.cpp cpuInfo.h
+cpuInfo.o: cpuInfo.cpp cpuInfo.h coreDetail.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+coreDetail.o: coreDetail.cpp coreDetail.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 .PHONY: clean
