--- a/z1951125_project2_dir/Makefile
+++ b/z1951125_project2_dir/Makefile
@@ -7,9 +7,7 @@ CXX = g++
 CXXFLAGS = -g -Wall -Werror -pedantic -std=c++20
 PROGS = z1951125_project2
 
-all: $(PROGS) 
-
-z1951125_project2: main.o
+$(PROGS): main.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
 main.o: main.cpp
